src/objects/RichListViews__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fields to be queried by the RichList controller for community</description>
    <fields>
        <fullName>Band_Colors__c</fullName>
        <description>Field Name, Value and its band color separated by commas and semicolons, conditions are evaluated in order: Status;C0 - No Resolution;#ebac1f,Status;C6 - Resolved;#8FB347,Status;C7 - Closed;#8FB347</description>
        <inlineHelpText>Field Name, Value and its band color separated by commas and semicolons, conditions are evaluated in order: Status;C0 - No Resolution;#ebac1f,Status;C6 - Resolved;#8FB347,Status;C7 - Closed;#8FB347</inlineHelpText>
        <label>Band Colors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Band_Default_Color__c</fullName>
        <defaultValue>&quot;#ebe8e3&quot;</defaultValue>
        <description>Band Default Color #ebe8e3</description>
        <inlineHelpText>Band Default Color #ebe8e3</inlineHelpText>
        <label>Band Default Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Headers__c</fullName>
        <description>Card Header Names in order</description>
        <label>Card Headers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Ratio__c</fullName>
        <description>The ratio of the columns in the list, numbers separated by commas: 5,1,1,1,1</description>
        <inlineHelpText>The ratio of the columns in the list, numbers separated by commas: 5,1,1,1,1</inlineHelpText>
        <label>Column Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <description>Column Names separated by commas in order</description>
        <inlineHelpText>Column Names separated by commas in order</inlineHelpText>
        <label>Columns</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Sort_Column__c</fullName>
        <defaultValue>&quot;Date Opened,CreatedDate,DESC&quot;</defaultValue>
        <description>API Name of the the field to use as default sort followed by the direction:
CreatedDate;DESC</description>
        <inlineHelpText>API Name of the the field to use as default sort followed by the direction:
CreatedDate;DESC</inlineHelpText>
        <label>Default Sort Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields2__c</fullName>
        <description>Fields to be queried 2</description>
        <label>Fields2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields3__c</fullName>
        <description>Fields to be queried 3</description>
        <label>Fields3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_On_Card__c</fullName>
        <description>Number of fields to display on the card, needs to match the number of card headers</description>
        <inlineHelpText>Number of fields to display on the card, needs to match the number of card headers</inlineHelpText>
        <label>Fields On Card</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <description>Fields to be queried</description>
        <label>Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter2__c</fullName>
        <label>Filter2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter3__c</fullName>
        <label>Filter3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Fields__c</fullName>
        <description>The API name of the fields to be used as flags separated by commas</description>
        <inlineHelpText>The API name of the fields to be used as flags separated by commas</inlineHelpText>
        <label>Flag Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Names_Color__c</fullName>
        <description>The flag names to be displayed if the Flag Fields are true, must match order of Flag Fields.Flags are separated by commas with the color separated by semicolon: Customer Action Required;##ebac1f,Escalated;#AD3B0E</description>
        <inlineHelpText>The flag names to be displayed if the Flag Fields are true, must match order of Flag Fields.Flags are separated by commas with the color separated by semicolon: Customer Action Required;##ebac1f,Escalated;#AD3B0E</inlineHelpText>
        <label>Flag Names &amp; Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Position__c</fullName>
        <description>Zero based index of the column where the flag pills will be placed.</description>
        <inlineHelpText>Zero based index of the column where the flag pills will be placed.</inlineHelpText>
        <label>Flag Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Columns__c</fullName>
        <description>Number of columns in the table not counting the main card</description>
        <inlineHelpText>Number of columns in the table not counting the main card</inlineHelpText>
        <label>Num Columns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <defaultValue>&quot;Case&quot;</defaultValue>
        <description>The Object for this list view.</description>
        <inlineHelpText>The Object for this list view.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Pills__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that controls if the flag pills are shown in this list view</description>
        <inlineHelpText>Checkbox that controls if the flag pills are shown in this list view</inlineHelpText>
        <label>Show Pills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Columns__c</fullName>
        <description>API field names in order of columns that can be sorted</description>
        <inlineHelpText>API field names in order of columns that can be sorted</inlineHelpText>
        <label>Sort Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RichListViews</label>
</CustomObject>